--- a/front-table-app/public/index.html
+++ b/front-table-app/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://kit.fontawesome.com/fa5e5ee5d1.js" crossorigin="anonymous"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
